--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         password: ${{ secrets.DEPLOY_PASSWORD }}
         port: 22
         source: "build/web/*"
-        target: "/var/www/lixemgang/build/web"
+        target: "/var/www/lixemgang/"
         rm: true  # удаляет старые файлы перед копированием
 
     - name: ✅ Reload nginx
